--- a/src/de_cart_ui/assets/main.css
+++ b/src/de_cart_ui/assets/main.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+/* body {
     font-family: sans-serif;
     font-size: 1.5rem;
 }
@@ -38,4 +38,4 @@ button[type="submit"] {
 
 #greeting:empty {
     display: none;
-}
+} */
